# igv-streamlit

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
.streamlit/: config.toml
igv_streamlit/: __init__.py  _viewer_app.py  cli.py  server.py
local-data/: PF0833-C.filtered.bam  PF0833-C.filtered.bam.bai  PF0833-C.filtered.cram  PF0833-C.filtered.cram.crai  SPT24175.filtered.bam  SPT24175.filtered.bam.bai
