[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "igv-streamlit"
version = "0.1.0"
description = "An unofficial Streamlit component for embedding the igv.js genome browser"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11.4"
authors = [{ name = "Chiyun Lee", email = "chiyun.alberto.lee@gmail.com" }]
keywords = ["streamlit", "igv", "genomics", "bioinformatics", "malariagen", "genome", "bam", "cram"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "streamlit>=1.42.0",
]

[project.urls]
Homepage = "https://github.com/malariagen/igv-streamlit"
Issues   = "https://github.com/malariagen/igv-streamlit/issues"

[tool.setuptools.packages.find]
include = ["igv_streamlit*"]
